# tuxracer-vr

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  bh.h  bootstrap  config_screen.cpp  configure  configure.ac  configure.linux  course.cpp  course_render.cpp  course_render.h  credits.cpp  env.cpp  etr_config.h  etr_config.h.in  etr_types.h  event.cpp  event_select.cpp  font.cpp  game_config.cpp  game_config.h  game_over.cpp  game_over.h  game_type_select.cpp  gui.cpp  gui.h  help.cpp  hud.cpp  index.html  intro.cpp  loading.cpp  main.cpp  newplayer.cpp  ogl.cpp  ogl.h  params.json  particles.cpp  (+24 more)
config/: highscore  messages  options.txt  players
data/: Makefile.in  credits.lst
data/char/: Makefile.in
data/char/beastie/: Makefile.in
data/char/boris/: Makefile.in
data/char/samuel/: Makefile.in
data/char/trixi/: Makefile.in
data/char/tux/: Makefile.in
data/courses/: Makefile.in  courses.lst  events.lst
data/courses/bumpy_ride/: Makefile.in  course.dim
data/courses/bunny_hill/: Makefile.in  course.dim
data/courses/challenge_one/: Makefile.in
data/courses/chinese_wall/: Makefile.in
data/courses/chragis_gagiwaetter/: Makefile.in  items.lst
data/courses/course/: Makefile.in
data/courses/downhill_fear/: Makefile.in
data/courses/explore_mountains/: Makefile.in
data/courses/frozen_lakes/: Makefile.in
data/courses/frozen_river/: Makefile.in  course.dim
data/courses/hippo_run/: Makefile.in
data/courses/holygrail/: Makefile.in
data/courses/in_search_of_vodka/: Makefile.in
data/courses/keep_country_tidy/: Makefile.in
data/courses/milos_castle/: Makefile.in
data/courses/path_of_daggers/: Makefile.in
data/courses/penguins_cant_fly/: Makefile.in
data/courses/quiet_river/: Makefile.in
data/courses/secret_valleys/: Makefile.in
data/courses/ski_jump/: course.dim
data/courses/this_means_something/: Makefile.in
data/courses/tux_at_home/: Makefile.in
data/courses/twisty_slope/: Makefile.in  course.dim
data/courses/wild_mountains/: Makefile.in
data/env/: Makefile.in  environment.lst
data/env/etr/: Makefile.in
data/env/etr/cloudy/: Makefile.in  light.lst
data/env/etr/evening/: Makefile.in
data/env/etr/night/: Makefile.in
data/env/etr/sunny/: Makefile.in  light.lst
data/env/tuxracer/: Makefile.in
data/env/tuxracer/cloudy/: Makefile.in
data/env/tuxracer/evening/: Makefile.in
data/env/tuxracer/night/: Makefile.in
data/env/tuxracer/sunny/: Makefile.am  Makefile.in
data/fonts/: Makefile.in  fonts.lst
data/music/: Makefile.in  racing_themes.lst
data/objects/: Makefile.in
data/players/: Makefile.in
data/sounds/: Makefile.in
data/terrains/: Makefile.in
data/textures/: Makefile.in  textures.lst
data/translations/: Makefile.in  de_DE.lst  es_ES.lst  fr_FR.lst  pl_PL.lst  pt_PT.lst
doc/: Makefile.in
resources/: Makefile.in
shaders/: fxaa.glsl
src/: Makefile.am  Makefile.in  audio.cpp  bh.h  config_screen.cpp  course.cpp  course.h  course_render.cpp  course_render.h  credits.cpp  env.cpp  env.h  etr_config.h  etr_config.h.in  etr_types.h  event.cpp  event.h  event_select.cpp  font.cpp  font.h  game_config.cpp  game_config.h  game_over.cpp  game_type_select.cpp  gui.cpp  gui.h  help.cpp  intro.cpp  loading.cpp  main.cpp  mathlib.cpp  mathlib.h  newplayer.h  ogl.cpp  ogl.h  particles.cpp  paused.cpp  physics.cpp  physics.h  quadtree.cpp  (+22 more)
